tests/error/type_errors/or_not_bool_right.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy
5:    def foo(x: bool) -> bool:
6:        return x or 42
                      ^^
GuppyTypeError: Expected expression of type `bool`, but got `42` of type `int`
